--- a/Parkeonmapservice/app/build.gradle
+++ b/Parkeonmapservice/app/build.gradle
@@ -4,17 +4,16 @@ android {
     compileSdkVersion 24
     buildToolsVersion "25.0.0"
     defaultConfig {
-        applicationId "ua.com.alternatiview.parkeonservice"
-        minSdkVersion 20
+        applicationId "ua.com.alternatiview.parkeonmapservice"
+        minSdkVersion 21
         targetSdkVersion 24
-        versionCode 1
-        versionName '2.0'
+        versionCode 2
+        versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        useLibrary 'org.apache.http.legacy'
-        multiDexEnabled true
     }
     buildTypes {
         release {
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -27,9 +26,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:multidex:1.0.0'
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
     compile 'com.google.android.gms:play-services:9.8.0'
     testCompile 'junit:junit:4.12'
 }
