--- a/ParkeonService/app/src/main/AndroidManifest.xml
+++ b/ParkeonService/app/src/main/AndroidManifest.xml
@@ -23,14 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ListingActivity" />
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
-        -->
+        
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -38,6 +31,10 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"></activity>
+        <activity android:name=".ConfirmNewDevice"
+            android:theme="@style/AppTheme.ConfirmWindowTheme">
+
+        </activity>
     </application>
 
 </manifest>
