--- a/ParkeonService/app/src/main/AndroidManifest.xml
+++ b/ParkeonService/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        android:hardwareAccelerated="false"
-        android:name="android.support.multidex.MultiDexApplication">
+        android:hardwareAccelerated="false">
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -23,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ListingActivity" />
-        
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
