--- a/ParkeonService/app/build.gradle
+++ b/ParkeonService/app/build.gradle
@@ -19,7 +19,7 @@ android {
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "ua.com.alternatiview.parkeonservice"
-        minSdkVersion 14
+        minSdkVersion 20
         targetSdkVersion 24
         versionCode 1
         versionName '2.0'
@@ -51,6 +51,6 @@ dependencies {
     compile 'com.android.support:multidex:1.0.0'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
-    compile 'com.google.android.gms:play-services-maps:9.8.0'
+    compile 'com.google.android.gms:play-services:9.8.0'
     testCompile 'junit:junit:4.12'
 }
