--- a/ParkeonService/app/src/main/AndroidManifest.xml
+++ b/ParkeonService/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        android:hardwareAccelerated="false">
+        android:hardwareAccelerated="false"
+        android:name="android.support.multidex.MultiDexApplication">
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -22,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ListingActivity" />
-
+        
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
