--- a/ParkeonService/app/build.gradle
+++ b/ParkeonService/app/build.gradle
@@ -19,13 +19,12 @@ android {
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "ua.com.alternatiview.parkeonservice"
-        minSdkVersion 20
+        minSdkVersion 14
         targetSdkVersion 24
         versionCode 1
         versionName '2.0'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         useLibrary 'org.apache.http.legacy'
-        multiDexEnabled true
         signingConfig signingConfigs.config
     }
     buildTypes {
@@ -48,9 +47,8 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:multidex:1.0.0'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
-    compile 'com.google.android.gms:play-services:9.8.0'
+    compile 'com.google.android.gms:play-services-maps:9.8.0'
     testCompile 'junit:junit:4.12'
 }
